@@ -1,0 +1,53 @@
+<HTML>
+<HEAD><TITLE>HttpUnit FAQ</TITLE></HEAD>
+<BODY>
+<H1>Frequently Asked Questions</H1>
+
+
+<OL>
+<LI><A HREF="#Cannot unzip">Why can't I unzip the download library?</A></LI>
+<LI><A HREF="#org.xml.sax">What is the org.xml.sax package?</A></LI>
+<LI><A HREF="#meterware.com">Where is meterware.com?</A></LI>
+<LI><A HREF="javascript">How do I use HttpUnit to test my pages that use JavaScript?</A></LI>
+<LI><A HREF="https">Does HttpUnit support https?</A></LI>
+<LI><A HREF="proxy">Can I use HttpUnit through a proxy server?</A></LI>
+
+</OL>
+
+
+
+<A NAME="Cannot unzip"><H2>Why can't I unzip the download library?</H2></A>
+HttpUnit is archived using the classes in the java.util.zip package. Some older Unzip programs cannot understand this format. 
+If you are using WinZip, stick to version 7.0 or later.
+
+<A NAME="org.xml.sax"><H2>What is the org.xml.sax package?</H2></A>
+You may be getting compile or runtime errors asking for the org.xml.sax package. This package is found in JTidy, the HTML parser used
+by HttpUnit. You should download Jtidy from 
+<A HREF="http://sourceforge.net/project/showfiles.php?group_id=13153">its SourceForge download page</A>
+and install Tidy.jar in your classpath.
+
+<A NAME="meterware.com"><H2>Where is meterware.com?</H2></A>
+When I started HttpUnit, I had a web site with the meterware.com domain, and relied on it to host some of the example code. 
+Since then, my ISP has dropped the hosting package I was using and I have not yet signed up with another host, mostly due to 
+lack of funds. I hope to correct this in the near future.
+
+<A NAME="javascript"><H2>How do I use HttpUnit to test my pages that use JavaScript?</H2></A>
+Unfortunately, you can't. HttpUnit does not support any dialect of JavaScript. I have been shown a JavaScript library and it is possible 
+that I will one day add JavaScript support, but since I use it very little in my own development, and since it looks like a lot of work,
+it is not a major priority for me. If you feel ambitious enough to add JavaScript support yourself, I would be happy to accept submissions.
+
+<A NAME="https"><H2>Does HttpUnit support https?</H2></A>
+Yes, as long as you have the <A HREF="http://java.sun.com/products/jsse/">JSSE extension</A> installed. Download this extension and install
+its three jars in your classpath.
+
+<A NAME="proxy"><H2>Can I use HttpUnit through a proxy server?</H2></A>
+Yes. HttpUnit uses java.net.HttpURLConnection, so the 
+<A HREF="http://www.javaworld.com/javaworld/javatips/jw-javatip42.html">normal Java way to use
+proxies will work. At some point HttpUnit may support this more directly, but for now, you will need to set the system properties yourself.   
+
+</BODY></HTML> 
+
+
+
+
+
