@@ -25,7 +25,7 @@ Java unit test framework such as <A HREF="http://www.junit.org">JUnit</a>.
 It was designed and implemented by <a href="mailto:russgold@users.sourceforge.net">Russell Gold.</a></blockquote>
 
 <h2>Documentation</h2>
-<blockquote>A rudimentary <A HREF="doc/Cookbook.html">User's manual</A> is available, as is 
+<blockquote>A rudimentary <A HREF="doc/Cookbook.html">User's manual</A> is available, as is a <A HREF="doc/faq.html">FAQ</A> and
 the <A HREF="doc/api/index.html">javadoc</A>.
 Several working example files come with the distribution download.</blockquote>
 
