@@ -83,6 +83,7 @@ class ReceivedPage extends ParsedHTML {
 
     private static Tidy getParser() {
         Tidy tidy = new Tidy();
+        tidy.setCharEncoding( org.w3c.tidy.Configuration.RAW ); 
         tidy.setQuiet( true );
         tidy.setShowWarnings( HttpUnitOptions.getParserWarningsEnabled() );
         return tidy;
